--- a/_data/aboutsnippet.yml
+++ b/_data/aboutsnippet.yml
@@ -1,1 +1,2 @@
-Hello I'm Isaac. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras feugiat finibus orci, nec mollis nibh vestibulum at. Aenean imperdiet, neque euismod vehicula imperdiet, libero sem porttitor nisl, a rutrum lectus mi et nisi. Etiam viverra faucibus elit, et aliquet lectus bibendum eget. Nulla quam leo, rutrum quis commodo in, varius ac orci. Morbi hendrerit neque in elit dignissim, id condimentum lacus molestie.
+Hello I’m Isaac. A young coder from Britian. I enjoy making games, websites and videos.
+I make this website for pure fun and to practice my coding skills.
