--- a/_data/buttons.yml
+++ b/_data/buttons.yml
@@ -1,3 +1,8 @@
+- img: /assets/images/gifbtn.jpg
+  name: The GIF Button
+  about: Cycle some wild and crazy GIFs
+  url: /buttonofgif/
+  isNew: old
 - img: /assets/images/pcbtn.jpg
   name: Button of Detonation
   about: Press one button to make your computer look like it's crashed!
