--- a/_data/recents.yml
+++ b/_data/recents.yml
@@ -3,13 +3,13 @@
   about: Have a read through some mind-blowing conspiracies.
   url: /texts/weird-crazy-and-spooky-theories
   isNew: recent
+- img: /assets/images/gifbtn.jpg
+  name: The GIF Button
+  about: Cycle some wild and crazy GIFs
+  url: /buttonofgif/
+  isNew: old
 - img: /assets/images/reactiontester.png
   name: Reaction Tester
   about: Test your reactions and compete with your friends and get a brain speed.
   url: /reactiontester/
-  isNew: old
-- img: /assets/images/pcbtn.jpg
-  name: Button of Detonation
-  about: Press one button to make your computer look like it's crashed!
-  url: /detonation/
   isNew: old
