--- a/_data/buttons.yml
+++ b/_data/buttons.yml
@@ -1,4 +1,4 @@
-- img: /assets/images/gifbtn.jpg
+- img: /assets/images/gifbtn.png
   name: The GIF Button
   about: Cycle some wild and crazy GIFs
   url: /buttonofgif/
