--- a/_data/recents.yml
+++ b/_data/recents.yml
@@ -3,7 +3,7 @@
   about: Have a read through some mind-blowing conspiracies.
   url: /texts/weird-crazy-and-spooky-theories
   isNew: recent
-- img: /assets/images/gifbtn.jpg
+- img: /assets/images/gifbtn.png
   name: The GIF Button
   about: Cycle some wild and crazy GIFs
   url: /buttonofgif/
