--- a/_data/articles.yml
+++ b/_data/articles.yml
@@ -1,3 +1,8 @@
+- img: /assets/images/changeweb.png
+  name: Change a website
+  about: Prank or impress your firends by changing a website's contents!
+  url: /texts/change-a-website
+  isNew: recent
 - img: /assets/images/theories.jpg
   name: Weird, crazy and spooky theories
   about: Have a read through some mind-blowing conspiracies.
