--- a/_data/recents.yml
+++ b/_data/recents.yml
@@ -1,15 +1,15 @@
+- img: /assets/images/crystalbtn.png
+  name: The Crystal Button
+  about: See the future!
+  url: /button/crystalbutton/
+  isNew: recent
 - img: /assets/images/changeweb.png
   name: Change a website
   about: Prank or impress your firends by changing a website's contents!
   url: /texts/change-a-website
-  isNew: recent
+  isNew: old
 - img: /assets/images/theories.jpg
   name: Weird, crazy and spooky theories
   about: Have a read through some mind-blowing conspiracies.
   url: /texts/weird-crazy-and-spooky-theories
-  isNew: old
-- img: /assets/images/gifbtn.png
-  name: The GIF Button
-  about: Cycle some wild and crazy GIFs
-  url: /button/buttonofgif/
   isNew: old
