--- a/_data/buttons.yml
+++ b/_data/buttons.yml
@@ -1,3 +1,9 @@
+
+- img: /assets/images/crystalbtn.png
+  name: The Crystal Button
+  about: See the future!
+  url: /button/crystalbutton/
+  isNew: recent
 - img: /assets/images/gifbtn.png
   name: The GIF Button
   about: Cycle some wild and crazy GIFs
