--- a/_data/vid.yml
+++ b/_data/vid.yml
@@ -1,2 +1,3 @@
-url: https://youtube.com/shorts/CadYrv6ArMc?feature=share
-text: Make a website in 1 minute - FROM YOUR PHONE | YouTube
+url: /videos/CadYrv6ArMc
+img: /assets/images/makeawebsite.png
+text: Make a website in 1 minute - FROM YOUR PHONE
