publish others section and fake hack tool

--- a/_data/recents.yml
+++ b/_data/recents.yml
@@ -1,15 +1,15 @@
+- img: /assets/images/hackscreen.png
+  name: Fake Hacking Screen
+  about: Just spam keys on your keyboard and it will look like your hacking!
+  url: /fakehack/
+  isNew: recent
 - img: /assets/images/joedrop.png
   name: Joe Drop
   about: Hit Donald Trump with Joe Biden's head!
   url: /joedrop/
-  isNew: recent
+  isNew: old
 - img: /assets/images/crystal-btn.png
   name: The Crystal Button
   about: See the future!
   url: /button/crystalbutton/
-  isNew: old
-- img: /assets/images/changeweb.png
-  name: Change a website
-  about: Prank or impress your firends by changing a website's contents!
-  url: /texts/change-a-website
   isNew: old
